--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">• LECTURAS</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="lecturauno.html">Introducción</a>
+                        <a class="dropdown-item" href="lecturauno.html">Introducción hola soy leidi</a>
                         <a class="dropdown-item" href="lecturados.html">Amenazas Informaticas</a>
                         <a class="dropdown-item" href="lecturatres.html">Definición</a>
                         <a class="dropdown-item" href="lecturacuatro.html">Propósitos</a>
