--- a/Lecturas.html
+++ b/Lecturas.html
@@ -57,13 +57,17 @@
 
 			<div class="row" id="content">
 				<div class="col-md-6">
-					<h2>Lectura 1</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h2>AMENAZAS INFORMATICAS</h2>
+					<p>Hay muchas amenazas diferentes para la seguridad de tu ordenador, así como muchas formas diferentes en las que un pirata informático puede robar tu información o infectar tu ordenador. Una vez dentro de un ordenador, la amenaza suele mostrar muy pocos síntomas por lo que puede sobrevivir sin ser detectada durante un periodo prolongado. Su seguridad online y prevención contra el fraude en internet pueden ser sencillos. En general, los infractores están intentando hacer dinero de la forma más rápida y fácil posible. Cuanto más difícil le pongas su trabajo, es más probable que desistan de su objetivo y se vayan en busca de un blanco más fácil.</p>
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 				</div>
 				<div class="col-md-6">
-					<h3>Lectura 2</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3>VULNERABILIDADES</h3>
+					<p>Las vulnerabilidades son fallos en el software informático que crean debilidades en la seguridad global de tu ordenador o de tu red. Las vulnerabilidades también pueden producirse por configuraciones inadecuadas del ordenador o de la seguridad. Los piratas informáticos explotan estas debilidades, causando daños al ordenador o su información</p>
+					 <h4>COMO PUEDES DESCUBRIRLO</h4>
+					  Las empresas anuncian vulnerabilidades a medida que son descubiertas y trabajan rápido en arreglarlas con “parches” de software y seguridad.
+					  <h4>¿QUE HACER?</h4>
+					   Mantener los parches de software y seguridad actualizados asi mismo, configurar los ajustes de seguridad del sistema operativo, navegador de Internet y software de seguridad, las empresas deberían desarrollar políticas de seguridad para la conducta online, y los individuos deberían estar seguros de adoptar sus propias políticas para promover la seguridad online e instalar una solución de seguridad proactiva como Norton Internet Security para bloquear las amenazas que se centran en las vulnerabilidades.</p>
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 				</div>
 			</div>
