--- a/Lecturas.html
+++ b/Lecturas.html
@@ -74,19 +74,54 @@
 
 			<div class="row">
 				<div class="col-md-3">
-					<h3>Lectura 3</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+					<h3>ANALISIS DE RIESGOS</h3>
+					<p>Hasta hace unos años, navegar por Internet era demasiado caro pero la variada oferta de conexiones de banda ancha y de tarifas planas ha conseguido que la mayoría de los hogares cuenten con varios ordenadores y con acceso a la red. Con el paso de los años, Internet ha ido avanzando hasta llegar a convertirse en la actualidad en uno de los canales de comunicación más importantes y cada vez más extendido entre jóvenes y mayores. Se trata de una herramienta de información y de comunicación con una dimensión cultural muy versificada. Pero Internet alberga entre sus páginas innumerables peligros que hay que aprender a identificar para poder escoger las medidas de protección más adecuadas en cada caso concreto. Se trata de aplicar diferentes técnicas que protejan los equipos informáticos de daños accidentales o intencionados, tales como los ataques perpetrados por hackers; pérdidas económicas causadas por virus, gusanos y demás malware; ciberbullying y grooming sufrido por menores en redes sociales; spam que inunda nuestro buzón con anuncios basura, timos y fraudes; software espía que se hace con nuestros datos financieros; pornografía y contenidos inadecuados para menores; pérdida de la intimidad personal y del anonimato… En definitiva, una larga lista que puede hacer perder el control de nuestros equipos.
+No obstante, las tres medidas básicas de seguridad que no pueden faltar en ningún ordenador conectado a Internet son: un cortafuegos, un antivirus y realizar las pertinentes actualizaciones de seguridad.
+</p>
+					<h3>CORTAFUEGOS</h3>
+					<p>Es un sistema que se utiliza para evitar que usuarios desautorizados tengan acceso a las redes privadas conectadas con Internet. Un cortafuegos no elimina problemas de virus del ordenador, sino que cuando se utiliza conjuntamente con actualizaciones regulares del sistema operativo y un buen software antivirus, añadirá cierta seguridad y protección al ordenador o a la red.</p>
+					<h3>ANTIVIRUS</h3>
+					<p>Es un programa cuya función es prevenir o evitar la activación de los virus, así como su propagación y contagio. El antivirus cuenta con una rutina de detención, de eliminación y de reconstrucción de los archivos y de las áreas infectadas o dañadas.</p>
+					<h3>ACTUALIZACIONES DE SEGURIDAD</h3>
+					<p>Para que un sistema operativo esté exento de ataques por parte de virus, gusanos, troyanos e intrusos, hay que actualizarlo periódicamente. Las Actualizaciones Automáticas se activan por defecto, mientras el equipo esté conectado a Internet, de acuerdo a la programación que previamente se haya definido. </p>
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 				</div>
 				<div class="col-md-3">
-					<h3>Lectura 4</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+					<h3>RIESGOS TECNOLOGICOS</h3>
+					<p>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la magnitud de las consecuencias. En un proyecto de seguridad informática puede haber un cambio o ajuste en la organización de la empresa y en las normas tecnológicas. En este sentido, se consideran dos tipos de arquitectura: la de la organización y la tecnológica. La arquitectura de la organización es la nueva estructura organizacional que normalmente se genera como consecuencia del uso de un cambio profundo en la seguridad informática, que a su vez conlleva un cambio en los procesos; este tipo de arquitectura debe ser modificada con respecto a la estructura organizacional que se tenía antes de implantar los nuevos protocolos lógicos y administrativos de seguridad informática. No obstante, si esta estructura no está bien diseñada y adaptada para el cambio, el riesgo de fracaso en la implantación de las nuevas medidas de seguridad es muy elevado, y lo mismo sucede con la arquitectura de la seguridad informática propiamente dicha. </p>
+					<h3>RIESGOS EXTERNOS</h3>
+					<p>El riesgo externo más simple se relaciona con la falta de recursos económicos internos en la organización, ante lo cual lo más común es solicitar un financiamiento para la realización del proyecto. Un vez que se han conseguido los recursos necesarios provenientes del exterior, entonces existirá un proveedor externo de capital, quien también, en algún momento, puede constituir un factor que retrase la entrega de los recursos por razones ajenas a la empresa. Otro riesgo externo importante se relaciona con aquellos factores fuera del control de los equipos de proyecto. Obsérvese que se hace énfasis en la aseveración: fuera del control de los equipos del proyecto, lo cual no exime a los directivos de la organización. Estos factores pueden ser una avería en instalaciones mal hechas, incendios parciales, descomposturas en los equipos de trabajo, huelgas, etcétera; esto es, aquellos factores sobre los cuales los equipos de trabajo no tienen control, pero sí los directivos, quienes en ciertos casos tienen el control sobre algunos de estos factores, en el sentido de que la mayoría de éstos depende de la forma en que es administrada la organización. Si ocurriera cualquiera de esos eventos, se retrasaría el proyecto con consecuencias económicas considerables. </p>
+					
+					<h3>AMENAZAS</h3>
+					<p>Se entiende por amenaza una condición del entorno de los sistemas, áreas o dispositivos que contienen información importante (persona, equipo, suceso o idea) que ante determinada circunstancia podría dar lugar a que se produjese una violación de seguridad (no cumplimiento de alguno de los aspectos mencionados), afectando parte de la información y de la TI de la organización. Cuando la información, la TI o cualquier otro tipo de activo es víctima de una amenaza, éstos no se ven afectados en todas sus dimensiones ni en la misma cuantía. Por tanto, una vez determinado que una amenaza podría perjudicar a un activo, hay que estimar cuán vulnerable es dicho activo en dos sentidos: 1) degradación, que significa cuán perjudicado resultaría el activo, y todo activo dañado tiene un costo en su reparación o reposición y 2) frecuencia, que significa cada cuándo se materializa la amenaza. Luego, habrá que determinar en qué consisten las amenazas que pueden afectar a cada activo de la empresa y causar un daño considerable. </p>
+					
+					Baca, U. G. (2016). Introducción a la seguridad informática. Retrieved from http://bibliotecavirtual.unad.edu.co:2460
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 				</div>
 
 				<div class="col-md-3">
-					<h3>Lectura 5</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
+					<h3>TIPOS DE ATAQUES INFORMATICOS</h3>
+					<h3>MALWARE</h3>
+					<p>El término Malware se refiere de forma genérica a cualquier software malicioso que tiene por objetivo infiltrarse en un sistema para dañarlo. Aunque se parece a lo que comúnmente se le conoce como virus, el virus es un tipo de malware. Igualmente existen otros como los gusanos, troyanos, etc.</p>
+					<h3>VIRUS</h3>
+					<p>El virus es un código que infecta los archivos del sistema mediante un código maligno, pero para que esto ocurra necesita que nosotros, como usuarios, lo ejecutemos. Una vez que se ejecuta, se disemina por todo nuestro sistema a donde nuestro equipo o cuenta de usuario tenga acceso, desde sipositivos de hardware hasta unidades virtuales o ubicaciones remotas en una red.</p>
+					<h3>GUSANOS</h3>
+					<p>Un gusano es un programa que, una vez infectado el equipo, realiza copias de sí mismo y las difunde por las red. A diferencia del virus, no necesita nuestra intervención, ni de un medio de respaldo, ya que pueden transmitirse utilizando las redes o el correo electrónico. Son difíciles de detectar, pues al tener como objetivo el difundirse e infectar a otros equipos, no afectan al funcionamiento normal del sistema.</p>
+					<h3>TROYANOS</h3>
+					<p>Son similares a virus, pero no completamente iguales. Mientras que el virus es destructivo por sí mismo, el troyano lo que busca es abrir una puerta trasera para favorecer la entrada de otros programas maliciosos.
+
+Su nombre es alusivo al “Caballo de Troya” ya que su misión es precisamente, pasar desapercibido e ingresar a los sistemas sin que sea detectado como una amenaza potencial. No se propagan a sí mismos y suelen estar integrados en archivos ejecutables aparentemente inofensivos.
+</p>
+					<h3>SPYWARE</h3>
+					<p>Un spyware es un programa espía, cuyo objetivo principal es obtener información. Su trabajo suele ser también silencioso, sin dar muestras de su funcionamiento, para que puedan recolectar información sobre nuestro equipo con total tranquilidad, e incluso instalar otros programas sin que nos demos cuenta de ello.</p>
+					<h3>ADWARE</h3>
+					<p>La función principal del adware es la de mostrar publicidad. Aunque su intención no es la de dañar equipos, es considerado por algunos una clase de spyware, ya que puede llegar a recopilar y transmitir datos para estudiar el comportamiento de los usuarios y orientar mejor el tipo de publicidad.
+
+</p>
+					<h3>RANSOMWARE</h3>
+					<p>Este es uno de los mas sofisticados y modernos malwares ya que lo que hace es secuestrar datos (encriptándolos) y pedir un rescate por ellos. Normalmente, se solicita una transferencia en bitcoins,la moneda digital, para evitar el rastreo y localización. Este tipo de ciberataque va en aumento y es uno de los más temidos en la Actualidad.</p>
+
+					Recuperado de: https://www.optical.pe/tipos-de-ataques-informaticos-y-previsiones-para-el-2018/
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 			</div>
 
