--- a/Autores.html
+++ b/Autores.html
@@ -85,13 +85,13 @@
                         	<img src="images/HECTOR.png" alt="HECTOR">
 						  </div>
 									<h6 class="card-subtitle mb-2 text-muted">HECTOR EFREN GUERRERO</h6>
-									<p class="card-text">Código: xxxxxxxxx</p>
+									<p class="card-text">Código: 0000000000</p>
 									<p class="card-text">Contact: @gmail.com</p>
 									<p class="card-text">Location: ACACIAS city</p>
 									<p class="card-text">University: Unad_CEAD_ACACIAS</p>
 									<p class="card-text">Skype: XXXXXXXX</p>
 									<p class="card-text">Estudent: systems engineer</p>
-								</di>
+								</div>
 					
 					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
 				
