--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
-﻿OCTYPE html>
+
+DOCTYPE html>
 <html lang="es">
-=======
 <!DOCTYPE html>
 <html>
->>>>>>> 3483ff40e78029230d254f3de989977283dd3809
+
 <head>
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
