--- a/Autores.html
+++ b/Autores.html
@@ -56,10 +56,11 @@
 		</div>
 		<div class="container">
 			<h1 class="text-center font-weight-bold">COLABORADORES</h1>
-			<section class="row py-5">
+			<hr>
+			<section class="row py-5"></section>
 		<div class="col-sm-6 col-md-3 col-lg-3">
 			<div class="card" style="width: 18rem;">
-				<img class="card-img-top" src="images/NUBIA.jpg" alt="Card image cap">
+				<img class="card-img-top" async src="images/NUBIA.jpg" alt="Card image cap">
 				<div class="card-body">
 				<p class="card-text"> NUBIA ESPERANZA PRADA</p>
 			</div>
@@ -75,7 +76,7 @@
 					</div>
 				</div>
 		<div class="col-sm-6 col-md-3 col-lg-3">
-			<div class="card" style="width: 17rem;">
+			<div class="card" style="width: 18rem;">
 				<img class="card-img-top" async src="images/LUIS.png" alt="Card image cap">
 				<div class="card-body">
 				<p class="card-text"> LUIS ANGEL ACERO</p>
@@ -83,7 +84,7 @@
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-3 col-lg-3">
-			<div class="card" style="width: 15.5rem;">
+			<div class="card" style="width: 18rem;">
 				<img class="card-img-top" async src="images/NICOLAS.jpg" alt="Card image cap">
 				<div class="card-body">
                 <p class="card-text"> NICOLAS FELIPE CASTANEDA</p>
