EDICION 2 - Luis Acero
Luis Acero

--- a/Ac1Aprendiendo.html
+++ b/Ac1Aprendiendo.html
@@ -8,16 +8,15 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<!-- Custom styles for this template -->
+
 	<link href="css/justified-nav.css" rel="stylesheet" type="text/css">
 	<link href="css/templatemo_style.css" rel="stylesheet" type="text/css">
 
-
-</head>
 <body>
 	<div id="main_container">
 		<div class="container" id="home">
 			<div class="header">
+
 
 			</div>
 			<img src="images/seguridad.jpg" alt="header image" class="templatemo-header-img img-responsive cleaner">  <!-- CAMBIAR IMAGEN  DE BANER-->
@@ -56,7 +55,7 @@
 								 <ul class="nav nav-sudmenu">
 								 		 <li><a href="">Submenu1</a></li>
 								 		 <li><a href="">Submenu2</a></li>
-								 		 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+								 		 <li><a href="">Aprendiendo Jugando</a></li>
 								 		</ul>
 								 	 </li>
 
@@ -66,68 +65,38 @@
 	      	</div>
 
 
-			<div class="row" id="img_preview">
-				<div class="col-md-9">
+					<div class="row" id="content">
+						<div class="col-md-6">
+							<h2>True Key Game </h2>
+							<p>True Key Game es como se llama el videojuego sobre seguridad informática lanzado por McAfee; el objetivo es que aprendamos más sobre los conceptos básicos de la seguridad mientras nos entretenemos un rato. En otras palabras, “edutainment”; un género de videojuegos que intenta mezclar la educación y el entretenimiento. Una vez iniciamos True Key Game entrando en la página oficial, podremos elegir si nuestro personaje es hombre o mujer, y su nombre.</p>
 
-					<h3>Actividades Didacticas</h3>
+						<div class="row" id="img_preview">
+								<a href="https://game.truekey.com/ES/">
+									<img src="images/mcafee-juego.jpg " title="Click para Jugar"
+																class="img-responsive" width="535" height="840">
+																</a>
+																<p></p>
+																<center><a href="https://game.truekey.com/ES/" class="more btn btn-warning btn-sm" role="button">Jugar</a></center>
+								</div>
+							</div>
 
-					<a href="Ac1Aprendiendo.html" title="Click to see the original size">
-						<img src="images/Interland-grande.jpg"
-                        	alt="Model Girl" class="img-responsive" width="840" height="840">
-					</a>
+									<div class="row" id="content">
+										<div class="col-md-6">
+											<h2>Be Internet Awesome de google</h2>
+											<p>Be Internet Awesome, una aventura gráfica online que te resultará muy familiar en su diseño si eres usuario de Minecraft. Se trata de un juego de rol online en el que irás avanzando a medida que superes pruebas contra piratas informáticos y ciberdelincuentes que ponen en riesgo tu supervivencia en Interland. La idea de Google es que su programa se convierta en una herramienta de juego y aprendizaje en los centros educativos.</p>
 
-				</div>
+										<div class="row" id="img_preview">
+												<a href="https://beinternetawesome.withgoogle.com/interland/">
+													<img src="images/interland.jpg " title="Click para Jugar"
+																				class="img-responsive" width="800" height="840">
+																				</a>
+																				<p></p>
+																				<center><a href="https://beinternetawesome.withgoogle.com/interland" class="more btn btn-warning btn-sm" role="button">Jugar</a></center>
+												</div>
+											</div>
+										</div>
+									</div>
 
-				<div class="col-md-3">
-					<div class="preview_footer_container">
-						<div class="footer_item section_box col-xs-12 col-sm-4 col-md-12">
-							<h4>Be Internet Awesome</h4>
-                            <p> Una aventura gráfica online que te resultará muy familiar en su diseño si eres usuario de Minecraft aprendiendo seguridad informatica.</p>
-                            <a href="https://beinternetawesome.withgoogle.com/interland/" class="btn btn-primary" role="button">Jugar</a>
-                            <a href="Ac1Aprendiendo.html" class="btn btn-info" role="button">Información</a>
-						</div>
-
-                        <div class="footer_item section_box col-xs-12 col-sm-4 col-md-12">
-							<h4>True Key Game</h4>
-                            <p>True Key Game es como se llama el videojuego sobre seguridad informática lanzado por McAfee.</p>
-														<a href="https://game.truekey.com/ES/" class="btn btn-primary" role="button">Jugar</a>
-														<a href="Ac1Aprendiendo.html" class="btn btn-info" role="button">Información</a>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-			<div class="row" id="other_downloads">
-				<h3 class="col-lg-12">Avtiddes</h3>
-				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="Ac1Aprendiendo.html" class="thumbnail">
-						<img src="images/true.jpg">
-						<p class="hideOverflow">
-	                    	<abbr title="Model Girl One">True Key Game</abbr>
-	                    </p>
-					</a>
-				</div>
-				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 3">
-						<p>Falta anexar</p>
-					</a>
-				</div>
-				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 5">
-						<p>Falta anexar</p>
-					</a>
-				</div>
-				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 7">
-						<p>Falta anexar</p>
-					</a>
-				</div>
-			</div>
-		</div>
 
 
 		<footer class="container">
