--- a/Autores.html
+++ b/Autores.html
@@ -4,34 +4,19 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
-	<title>Lecturas</title>
+	<title>Autores</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<!-- Custom styles for this template -->
+
 	<link href="css/justified-nav.css" rel="stylesheet" type="text/css">
 	<link href="css/templatemo_style.css" rel="stylesheet" type="text/css">
 
-	<!-- HTML 5 shim for IE backwards compatibility -->
-		<!-- [if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-		</script>
-		<![endif]-->
-</head>
 <body>
 	<div id="main_container">
 		<div class="container" id="home">
 			<div class="header">
 
-		<!--		<a href="#">
-					<img src="images/templatemo_logo.jpg" alt="fantasy html5 template" class="templatemo-logo">  SE PUEDE BORRAR, ES DE FANTASY, YA QUE SOLO UTILIZARA BANNER
-				</a>
-						<form  action="#" method="get" class="navbar-form pull-right" role="search">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search" id="keyword" name="keyword">
-							</div>
-							<button type="submit" class="btn btn-default" name="Search">Go</button> -->
-						</form>
 
 			</div>
 			<img src="images/seguridad.jpg" alt="header image" class="templatemo-header-img img-responsive cleaner">  <!-- CAMBIAR IMAGEN  DE BANER-->
@@ -44,76 +29,147 @@
 						<span class="icon-bar"></span>
 					</button>
 		        </div>
+
       			<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
 			          <li><a href="index.html">inicio</a></li>
-	                  <li class="active"><a href="Lecturas.html">Lecturas</a></li> <!--EL li Class="active, ES PARA ACTIVAR EL EFECTO DE LOS BOTONES" -->
-			          <li><a href="Multimedia.html">Multimedia</a></li>
-			          <li><a href="Actividades.html">Actividades</a></li>
-			          <li><a href="Autores.html">Autores</a></li>
-			        </ul>
-		      	</div> <!-- nav -->
-	      	</div>
-			<div class="row" id="content">
-				<div class="col-md-6">
-					<h2>Lectura 1</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
-				</div>
-				<div class="col-md-6">
-					<h2>Lectura 2</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<h3>Lectura 3</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
-					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
-				</div>
-				<div class="col-md-3">
-					<h3>Lectura 4</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
-					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
-				</div>
-				<div class="col-md-3">
-					<h3>Lectura 5</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip...</p>
-					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
-			</div>
 
-		</div>
+								<li><a href="Lecturas.html">Lecturas</a> <!--A este se le quita el <li> para que tenga subitems -->
+									<ul class="nav nav-sudmenu">
+										<li><a href="Le1Amenzas.html">AMENAZAS INFORMATICAS</a></li>
+ 									 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
+ 									 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
+ 									 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
+ 									 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
+ 									</ul>
+ 								 </li>
+
+						<li><a href="Multimedia.html">Multimedia</a>
+							<ul class="nav nav-sudmenu">
+								<li><a href="video1.html">Video Tutorial Seguridad Informatica 1</a></li>
+								<li><a href="video2.html">Video Tutorial Seguridad Informatica 2</a></li>
+									</ul>
+								 </li>
+
+			           <li><a href="Actividades.html">Actividades</a>
+								 <ul class="nav nav-sudmenu">
+								 		 <li><a href="">Submenu1</a></li>
+								 		 <li><a href="">Submenu2</a></li>
+								 		 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+								 		</ul>
+								 	 </li>
+
+			          <li  class="active"><a href="Autores.html">Autores</a></li>
+			        </ul>
+		      	</div>
+	      	</div>
+
+					<div class="row" id="img_preview">
+						<div class="col-md-3">
+							<h3></h3>
+							<a href="images/NUBIA.png">
+								<img src="images/NUBIA.png"
+		                        	class="img-responsive" width="800" height="840">
+								</a>
+							</div>
+
+								<div class="col-md-3">
+										<div class="section_box">
+											<h4><center>NUBIA ESPERANZA PRADA BARAJAS</center></h4>
+												<p><b>Código:</b>  301122-89</p>
+												<p><b>Contacto:</b>  nubiaepb@gmail.com</p>
+												<p><b>Locacion:</b>  Acacias </p>
+												<p><b>Universidad:</b>  Unad_Cead_Acacias</p>
+												<p><b>Skype:</b>  nubia.prada</p>
+												<p><b>Estudiante:</b>  Ingenieria de sistemas</p>
+										</div>
+										</div>
+
+										<div class="col-md-3">
+											<a href="images/HECTOR.png">
+												<img src="images/HECTOR.png"
+																		class="img-responsive" width="240" height="840">
+												</a>
+											</div>
+
+											<div class="col-md-3">
+													<div class="section_box">
+														<h4><center>HECTOR EFREN GUERRERO</center></h4>
+															<p><B>Código:</b> xxxxxxxxx</p>
+															<p><b>Contacto:</b> @gmail.com</p>
+															<p><b>Locación:</b> Acacias </p>
+															<p><b>Universidad:</b> Unad_Cead_Acacias</p>
+															<p ><b>Skype:</b> hectorguerrero30</p>
+															<p><b>Estudiante:</b> Ingenieria de sistemas</p>
+													</div>
+													</div>
+									</div>
+
+									<div class="row" id="img_preview">
+										<div class="col-md-3">
+											<a href="images/Luis.jpeg">
+												<img src="images/Luis.jpeg"
+																			class="img-responsive" width="250" height="840">
+												</a>
+											</div>
+
+												<div class="col-md-3">
+														<div class="section_box">
+															<h4><center>LUIS ANGEL ACERO ACERO</center></h4>
+																<p><b>Código:</b>  1118554771</p>
+																<p><b>Contacto:</b>  laacero80@gmail.com</p>
+																<p><b>Locacion:</b>  Yopal </p>
+																<p><b>Universidad:</b>  Unad_Cead_Yopal</p>
+																<p><b>Skype:</b> angel93acero/p>
+																<p><b>Estudiante:</b>  Ingenieria de sistemas</p>
+														</div>
+														</div>
+
+														<div class="col-md-3">
+															<h3></h3>
+															<a href="images/sinfoto.jpg">
+																<img src="images/sinfoto.jpg"
+																						 class="img-responsive" width="740" height="840">
+																</a>
+															</div>
+
+															<div class="col-md-3">
+																	<div class="section_box">
+																		<h4><center>NNNNNNN NNNNNN NNNNN</center></h4>
+																			<p><B>Código:</b> xxxxxxxxx</p>
+																			<p><b>Contacto:</b> @gmail.com</p>
+																			<p><b>Locación:</b> Acacias </p>
+																			<p><b>Universidad:</b> Unad_Cead_Acacias</p>
+																			<p ><b>Skype:</b> NNNNNNNN</p>
+																			<p><b>Estudiante:</b> Ingenieria de sistemas</p>
+																	</div>
+																	</div>
+													</div>
+
+
 		<footer class="container">
 			<div class="credit row">
 				<div class="col-md-6 col-md-offset-3">
 					<div id="templatemo_footer">
 						UNAD Grupo 89 © 2018 Diseños de Sitios Web
 					</div>
-				</div>
-				<div class="col-md-3">
+					</div>
+					<div class="col-md-3">
 					<div style="text-align: right">
 						<a rel="nofollow" href="https://www.facebook.com/UniversidadUNAD/" target="_parent">
-                        	<img src="images/facebook.png" alt="Like us on Facebook">
-                        </a>
+													<img src="images/facebook.png" alt="Like us on Facebook">
+												</a>
 						<a rel="nofollow" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw%7Ctwcamp%5Eembeddedtimeline%7Ctwterm%5Eprofile%3AUniversidadUNAD&ref_url=file%3A%2F%2F%2FD%3A%2FLuis%2520Angel%2FDESCARGAS%2FUnidad_2-Seguridad_informatica-Grupo_27-master%2FUnidad_2-Seguridad_informatica-Grupo_27-master%2Findex.html" target="_parent">
 													<img src="images/twitter.png" alt="Follow us on Twitter">
-						  					</a>
+												</a>
 					</div>
 				</div>
 			</div>
 		</footer>
 	</div>
-    <!-- templatemo 393 fantasy -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/templatemo_script.js"></script>
-<!--
 
-Fantasy Template
-
-http://www.templatemo.com/tm-393-fantasy
-
--->
 </body>
 </html>
