--- a/Le1Amenzas.html
+++ b/Le1Amenzas.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
-	<title>Lecturas</title>
+	<title>Amenazas Informaticas</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -13,12 +13,10 @@
 	<link href="css/templatemo_style.css" rel="stylesheet" type="text/css">
 
 
-</head>
 <body>
 	<div id="main_container">
 		<div class="container" id="home">
 			<div class="header">
-
 
 
 			</div>
@@ -34,13 +32,12 @@
 
 
 					  </div>
-
       			<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
 			          <li><a href="index.html">inicio</a></li>
 	                  <li class="active"><a href="Lecturas.html">Lecturas</a> <!--EL li Class="active, ES PARA ACTIVAR EL EFECTO DE LOS BOTONES" -->
 										<ul class="nav nav-sudmenu">
-												 <li><a href="Le1Amenzas.html">AMENAZAS INFORMATICAS</a></li>
+												 <li><a href="">AMENAZAS INFORMATICAS</a></li>
 												 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
 												 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
 												 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
@@ -72,43 +69,19 @@
 			<div class="row" id="content">
 				<div class="col-md-6">
 					<h2>AMENAZAS INFORMATICAS</h2>
-				 	<p>Hay muchas amenazas diferentes para la seguridad de tu ordenador, así como muchas formas diferentes en las que un pirata informático puede robar tu información o infectar tu ordenador. Una vez dentro de un ordenador, la amenaza suele mostrar muy pocos síntomas por lo que puede sobrevivir sin ser detectada durante un periodo prolongado. Su seguridad online y prevención contra el fraude en internet pueden ser sencillos. En general, los infractores...</p>
-					<a href="Le1Amenzas.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
+				 	<p>Hay muchas amenazas diferentes para la seguridad de tu ordenador, así como muchas formas diferentes en las que un pirata informático puede robar tu información o infectar tu ordenador. Una vez dentro de un ordenador, la amenaza suele mostrar muy pocos síntomas por lo que puede sobrevivir sin ser detectada durante un periodo prolongado. Su seguridad online y prevención contra el fraude en internet pueden ser sencillos. En general, los infractores están intentando hacer dinero de la forma más rápida y fácil posible. Cuanto más difícil le pongas su trabajo, es más probable que desistan de su objetivo y se vayan en busca de un blanco más fácil.</p>
 				</div>
 
+<!--INSERTANDO IMAGEN CON CLASE DE REDUCIRSE AL REDUCRI PANTALLA-->
 				<div class="col-md-6">
-					<h3>VULNERABILIDADES</h3>
-				<p>Las vulnerabilidades son fallos en el software informático que crean debilidades en la seguridad global de tu ordenador o de tu red. Las vulnerabilidades también pueden producirse por configuraciones inadecuadas del ordenador o de la seguridad. Los piratas informáticos explotan estas debilidades, causando daños al ordenador o su información.</p>
-				 <h4>COMO PUEDES DESCUBRIRLO</h4>
-					<a href="Le2Vulnerabilidades.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
+					<center>
+						<img src="images/amenazas-info1.jpg"
+													alt="info1" class="img-responsive" width="440" height="840">
+					</center>
+					</a>
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-md-3">
-					<h3>ANALISIS DE RIESGOS</h3>
-					<p>Hasta hace unos años, navegar por Internet era demasiado caro pero la variada oferta de conexiones de banda ancha y de tarifas planas ha conseguido que la mayoría de los hogares cuenten con varios ordenadores...<p>
-					<a href="Le3Analisis.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-				<div class="col-md-3">
-					<h3>RIESGOS TECNOLOGICOS</h3>
-					<P>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la magnitud de las consecuencias. En un proyecto de seguridad informática...</P>
-					<a href="Le4Riesgos.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-
-				<div class="col-md-3">
-					<h3>TIPOS DE ATAQUES INFORMATICOS</h3>
-					<h4>RIESGOS TECNOLOGICOS</h4>
-					<p>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la...</p>
-					<a href="Le5Ataques.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-			</div>
-
-			<div class="col-md-3">
-			                	<blockquote>
-			                        <a class="twitter-timeline" data-width="250" data-height="250" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-								</blockquote>
-						</div>
-		</div>
 
 
 		<footer class="container">
