--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<<<<<<< HEAD
-﻿OCTYPE html>
-<html lang="es">
-=======
 <!DOCTYPE html>
 <html>
->>>>>>> 3483ff40e78029230d254f3de989977283dd3809
 <head>
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -13,36 +8,16 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<!-- Custom styles for this template -->
+
 	<link href="css/justified-nav.css" rel="stylesheet" type="text/css">
 	<link href="css/templatemo_style.css" rel="stylesheet" type="text/css">
-<!--
 
-Fantasy Template
-
-http://www.templatemo.com/tm-393-fantasy
-
--->
-	<!-- HTML 5 shim for IE backwards compatibility -->
-		<!-- [if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-		</script>
-		<![endif]-->
 </head>
 <body>
 	<div id="main_container">
 		<div class="container" id="home">
 			<div class="header">
 
-		<!--		<a href="#">
-					<img src="images/templatemo_logo.jpg" alt="fantasy html5 template" class="templatemo-logo">  SE PUEDE BORRAR, ES DE FANTASY, YA QUE SOLO UTILIZARA BANNER
-				</a>
-						<form  action="#" method="get" class="navbar-form pull-right" role="search">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search" id="keyword" name="keyword">
-							</div>
-							<button type="submit" class="btn btn-default" name="Search">Go</button> -->
-						</form>
 
 			</div>
 			<img src="images/seguridad.jpg" alt="header image" class="templatemo-header-img img-responsive cleaner">  <!-- CAMBIAR IMAGEN  DE BANER-->
@@ -55,16 +30,45 @@ http://www.templatemo.com/tm-393-fantasy
 						<span class="icon-bar"></span>
 					</button>
 		        </div>
-      			<div class="navbar-collapse collapse">
+																				<!--Tips class="" es llamar una clase de un codigo css-->
+
+						<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
 			          <li class="active"><a href="index.html">Inicio</a></li> <!-- ACA PARA ABAJO SE CAMBIA LOS NOMBRE DE BOTONES-->
-	                  <li><a href="Lecturas.html">Lecturas</a></li>
-			          <li><a href="Multimedia.html">Multimedia</a></li>
-			          <li><a href="Actividades.html">Actividades</a></li>
+
+										<li><a href="Lecturas.html">Lecturas</a> <!--A este se le quita el <li> para que tenga subitems -->
+											<ul class="nav nav-sudmenu">
+										       <li><a href="Le1Amenzas.html">AMENAZAS INFORMATICAS</a></li>
+										       <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
+										       <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
+										       <li><a href="Le4Riesgos.html">RIESGOS</a></li>
+													 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
+										      </ul>
+										     </li>
+
+			          <li><a href="Multimedia.html">Multimedia</a>
+									<ul class="nav nav-sudmenu">
+										<li><a href="video1.html">Video Tutorial Seguridad Informatica 1</a></li>
+										<li><a href="video2.html">Video Tutorial Seguridad Informatica 2</a></li>
+											</ul>
+										 </li>
+
+			          <li><a href="Actividades.html">Actividades</a>
+								<ul class="nav nav-sudmenu">
+										 <li><a href="">Submenu1</a></li>
+										 <li><a href="">Submenu2</a></li>
+										 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+										</ul>
+									 </li>
+
 			          <li><a href="Autores.html">Autores</a></li>
 			        </ul>
-		      	</div> <!-- nav -->
+
+
+		      	</div>
 	      	</div>
+
+
 			<div class="row" id="thumbnails_container">
 				<div class="col-md-12">
 					<h2>Seguridad Informatica</h2>
@@ -77,16 +81,12 @@ http://www.templatemo.com/tm-393-fantasy
 										<p>3. La información presentada en el diseño de sitios wed permite  establecer normas que minimicen los riesgos a la información o infraestructura informática.</p>
 
 										<center>
-										<h3>Una pequeña introcucción</h3>
+										<h3>Una pequeña introducción</h3>
 									</center>
 									<iframe width="5300" height="315" src="https://www.youtube.com/embed/KiuTyXehW-8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-
-
-
-
-			</div> <!-- thumbnail area -->
+			</div>
 		</div>
+
 		<footer class="container">
 			<div class="credit row">
 				<div class="col-md-6 col-md-offset-3">
@@ -108,7 +108,7 @@ http://www.templatemo.com/tm-393-fantasy
 			</div>
 		</footer>
 	</div>
-    <!-- templatemo 393 fantasy -->
+
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/templatemo_script.js"></script>
