--- a/video2.html
+++ b/video2.html
@@ -50,7 +50,7 @@
 			          <li class="active"><a href="Multimedia.html">Multimedia</a>
 								<ul class="nav nav-sudmenu">
 										 <li><a href="video1.html">Video Tutorial Seguridad Informatica 1</a></li>
-										 <li><a href="video2.html">Video Tutorial Seguridad Informatica 2</a></li>
+										 <li><a href="">Video Tutorial Seguridad Informatica 2</a></li>
 										</ul>
 									 </li>
 
@@ -68,20 +68,16 @@
 		      	</div>
 	      	</div>
 
-					<div class="row" id="content">
-						<div class="col-md-6">
-							<h2>Video Tutorial Seguridad Informatica 1</h2>
-							<a href="video1.html"> <img src="images/seguridad-google.gif" title="Click para ver más información" alt="info1" class="img-responsive" width="840" height="840"></a>
-						</div>
+					<div class="row" id="thumbnails_container">
+						<div class="col-md-12">
+												<center>
+												<h2>Video Tutorial Seguridad Informatica 2</h2>
+											</center>
+											<p>Podemos definir  la seguridad informática como el proceso de prevenir y detectar el uso no autorizado de un sistema informático. Implica el proceso de proteger contra intrusos el uso de nuestros recursos informáticos con intenciones maliciosas o con intención de obtener ganancias, o incluso la posibilidad de acceder a ellos por accidente.</p>
+											<iframe width="5300" height="315" src="https://www.youtube.com/embed/K5RJX6qL0yQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
 
-						<div class="row" id="content">
-							<div class="col-md-6">
-								<h2>Video Tutorial Seguridad Informatica 2</h2>
-								<div class="imagen-fondo">
-								<a href="video2.html"><center><img src="images/seguridad2.gif" title="Click para ver más información" alt="info1" class="img-responsive" width="455" height="840"></center></a>
-								</div>
-								</div>
-							</div>
 
 		<footer class="container">
 			<div class="credit row">
