--- a/Le3Analisis.html
+++ b/Le3Analisis.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
-	<title>Lecturas</title>
+	<title>Analisis de riesgos</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,6 @@
 
 
 					  </div>
-
       			<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
 			          <li><a href="index.html">inicio</a></li>
@@ -42,7 +41,7 @@
 										<ul class="nav nav-sudmenu">
 												 <li><a href="Le1Amenzas.html">AMENAZAS INFORMATICAS</a></li>
 												 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
-												 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
+												 <li><a href="">ANALISIS DE RIESGOS</a></li>
 												 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
 												 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
 												</ul>
@@ -69,46 +68,39 @@
 	      	</div>
 
 
-			<div class="row" id="content">
-				<div class="col-md-6">
-					<h2>AMENAZAS INFORMATICAS</h2>
-				 	<p>Hay muchas amenazas diferentes para la seguridad de tu ordenador, así como muchas formas diferentes en las que un pirata informático puede robar tu información o infectar tu ordenador. Una vez dentro de un ordenador, la amenaza suele mostrar muy pocos síntomas por lo que puede sobrevivir sin ser detectada durante un periodo prolongado. Su seguridad online y prevención contra el fraude en internet pueden ser sencillos. En general, los infractores...</p>
-					<a href="Le1Amenzas.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
+					<div class="row" id="content">
+						<div class="col-md-6">
+							<h2>ANALISIS DE RIESGOS</h2>
+						<p>Hasta hace unos años, navegar por Internet era demasiado caro pero la variada oferta de conexiones de banda ancha y de tarifas planas ha conseguido que la mayoría de los hogares cuenten con varios ordenadores y con acceso a la red. Con el paso de los años, Internet ha ido avanzando hasta llegar a convertirse en la actualidad en uno de los canales de comunicación más importantes y cada vez más extendido entre jóvenes y mayores. Se trata de una herramienta de información y de comunicación con una dimensión cultural muy versificada. Pero Internet alberga entre sus páginas innumerables peligros que hay que aprender a identificar para poder escoger las medidas de protección más adecuadas en cada caso concreto. Se trata de aplicar diferentes técnicas que protejan los equipos informáticos de daños accidentales o intencionados, tales como los ataques perpetrados por hackers; pérdidas económicas causadas por virus, gusanos y demás malware; ciberbullying y grooming sufrido por menores en redes sociales; spam que inunda nuestro buzón con anuncios basura, timos y fraudes; software espía que se hace con nuestros datos financieros; pornografía y contenidos inadecuados para menores; pérdida de la intimidad personal y del anonimato… En definitiva, una larga lista que puede hacer perder el control de nuestros equipos.
+	No obstante, las tres medidas básicas de seguridad que no pueden faltar en ningún ordenador conectado a Internet son: un cortafuegos, un antivirus y realizar las pertinentes actualizaciones de seguridad.
+	</p>
+	</div>
 
-				<div class="col-md-6">
-					<h3>VULNERABILIDADES</h3>
-				<p>Las vulnerabilidades son fallos en el software informático que crean debilidades en la seguridad global de tu ordenador o de tu red. Las vulnerabilidades también pueden producirse por configuraciones inadecuadas del ordenador o de la seguridad. Los piratas informáticos explotan estas debilidades, causando daños al ordenador o su información.</p>
-				 <h4>COMO PUEDES DESCUBRIRLO</h4>
-					<a href="Le2Vulnerabilidades.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-3">
-					<h3>ANALISIS DE RIESGOS</h3>
-					<p>Hasta hace unos años, navegar por Internet era demasiado caro pero la variada oferta de conexiones de banda ancha y de tarifas planas ha conseguido que la mayoría de los hogares cuenten con varios ordenadores...<p>
-					<a href="Le3Analisis.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-				<div class="col-md-3">
-					<h3>RIESGOS TECNOLOGICOS</h3>
-					<P>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la magnitud de las consecuencias. En un proyecto de seguridad informática...</P>
-					<a href="Le4Riesgos.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-
-				<div class="col-md-3">
-					<h3>TIPOS DE ATAQUES INFORMATICOS</h3>
-					<h4>RIESGOS TECNOLOGICOS</h4>
-					<p>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la...</p>
-					<a href="Le5Ataques.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-			</div>
-
-			<div class="col-md-3">
-			                	<blockquote>
-			                        <a class="twitter-timeline" data-width="250" data-height="250" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-								</blockquote>
-						</div>
+	<!--INSERTANDO IMAGEN CON CLASE DE REDUCIRSE AL REDUCRI PANTALLA-->
+		<div class="col-md-6">
+			<center
+				<p></p>,<p></p>,<p></p>	<!--GENERAR ESPACIOS HACIA ABAJO COMO ENTERS-->
+				<img src="images/analisis.png"
+											alt="info1" class="img-responsive" width="840" height="840">
+											<p></p>,<p></p>,<p></p>,<p></p>,<p></p>
+			</center>
+			</a>
 		</div>
+
+
+	<div>
+		<div class="col-md-12">
+						<h4>CORTAFUEGOS</h4>
+						<p>Es un sistema que se utiliza para evitar que usuarios desautorizados tengan acceso a las redes privadas conectadas con Internet. Un cortafuegos no elimina problemas de virus del ordenador, sino que cuando se utiliza conjuntamente con actualizaciones regulares del sistema operativo y un buen software antivirus, añadirá cierta seguridad y protección al ordenador o a la red.</p>
+						<h4>ANTIVIRUS</h4>
+						<p>Es un programa cuya función es prevenir o evitar la activación de los virus, así como su propagación y contagio. El antivirus cuenta con una rutina de detención, de eliminación y de reconstrucción de los archivos y de las áreas infectadas o dañadas.</p>
+						<h4>ACTUALIZACIONES DE SEGURIDAD</h4>
+						<p>Para que un sistema operativo esté exento de ataques por parte de virus, gusanos, troyanos e intrusos, hay que actualizarlo periódicamente. Las Actualizaciones Automáticas se activan por defecto, mientras el equipo esté conectado a Internet, de acuerdo a la programación que previamente se haya definido. </p>
+						</div>
+	</div>
+
+
+
 
 
 		<footer class="container">
