--- a/Le5Ataques.html
+++ b/Le5Ataques.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
-	<title>Lecturas</title>
+	<title>Analisis de riesgos</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,6 @@
 
 
 					  </div>
-
       			<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
 			          <li><a href="index.html">inicio</a></li>
@@ -44,7 +43,7 @@
 												 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
 												 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
 												 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
-												 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
+												 <li><a href="">TIPOS DE ATAQUES INFORMATICOS</a></li>
 												</ul>
 											 </li>
 
@@ -69,47 +68,46 @@
 	      	</div>
 
 
-			<div class="row" id="content">
-				<div class="col-md-6">
-					<h2>AMENAZAS INFORMATICAS</h2>
-				 	<p>Hay muchas amenazas diferentes para la seguridad de tu ordenador, así como muchas formas diferentes en las que un pirata informático puede robar tu información o infectar tu ordenador. Una vez dentro de un ordenador, la amenaza suele mostrar muy pocos síntomas por lo que puede sobrevivir sin ser detectada durante un periodo prolongado. Su seguridad online y prevención contra el fraude en internet pueden ser sencillos. En general, los infractores...</p>
-					<a href="Le1Amenzas.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
+					<div class="row" id="content">
+						<div class="col-md-6">
+							<h3>TIPOS DE ATAQUES INFORMATICOS</h3>
+					<h4>MALWARE</h4>
+					<p>El término Malware se refiere de forma genérica a cualquier software malicioso que tiene por objetivo infiltrarse en un sistema para dañarlo. Aunque se parece a lo que comúnmente se le conoce como virus, el virus es un tipo de malware. Igualmente existen otros como los gusanos, troyanos, etc.</p>
+					<h4>VIRUS</h4>
+					<p>El virus es un código que infecta los archivos del sistema mediante un código maligno, pero para que esto ocurra necesita que nosotros, como usuarios, lo ejecutemos. Una vez que se ejecuta, se disemina por todo nuestro sistema a donde nuestro equipo o cuenta de usuario tenga acceso, desde sipositivos de hardware hasta unidades virtuales o ubicaciones remotas en una red.</p>
 
-				<div class="col-md-6">
-					<h3>VULNERABILIDADES</h3>
-				<p>Las vulnerabilidades son fallos en el software informático que crean debilidades en la seguridad global de tu ordenador o de tu red. Las vulnerabilidades también pueden producirse por configuraciones inadecuadas del ordenador o de la seguridad. Los piratas informáticos explotan estas debilidades, causando daños al ordenador o su información.</p>
-				 <h4>COMO PUEDES DESCUBRIRLO</h4>
-					<a href="Le2Vulnerabilidades.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-			</div>
+	</div>
 
-			<div class="row">
-				<div class="col-md-3">
-					<h3>ANALISIS DE RIESGOS</h3>
-					<p>Hasta hace unos años, navegar por Internet era demasiado caro pero la variada oferta de conexiones de banda ancha y de tarifas planas ha conseguido que la mayoría de los hogares cuenten con varios ordenadores...<p>
-					<a href="Le3Analisis.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-				<div class="col-md-3">
-					<h3>RIESGOS TECNOLOGICOS</h3>
-					<P>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la magnitud de las consecuencias. En un proyecto de seguridad informática...</P>
-					<a href="Le4Riesgos.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-				</div>
-
-				<div class="col-md-3">
-					<h3>TIPOS DE ATAQUES INFORMATICOS</h3>
-					<h4>RIESGOS TECNOLOGICOS</h4>
-					<p>Los riesgos de origen tecnológico; suelen ser cometidos por usuarios con muy poca experiencia, quienes no miden la...</p>
-					<a href="Le5Ataques.html" class="more btn btn-warning btn-sm" role="button">Mas</a>
-			</div>
-
-			<div class="col-md-3">
-			                	<blockquote>
-			                        <a class="twitter-timeline" data-width="250" data-height="250" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-								</blockquote>
-						</div>
+	<!--INSERTANDO IMAGEN CON CLASE DE REDUCIRSE AL REDUCRI PANTALLA-->
+		<div class="col-md-6">
+			<center
+				<p></p>	<!--GENERAR ESPACIOS HACIA ABAJO COMO ENTERS-->
+				<img src="images/virus.png"
+											alt="info1" class="img-responsive" width="840" height="840">
+											<p></p>,<p></p>
+			</center>
+			</a>
 		</div>
 
+
+	<div>
+		<div class="col-md-12">
+			<h4>GUSANOS</h4>
+			<p>Un gusano es un programa que, una vez infectado el equipo, realiza copias de sí mismo y las difunde por las red. A diferencia del virus, no necesita nuestra intervención, ni de un medio de respaldo, ya que pueden transmitirse utilizando las redes o el correo electrónico. Son difíciles de detectar, pues al tener como objetivo el difundirse e infectar a otros equipos, no afectan al funcionamiento normal del sistema.</p>
+			<h4>TROYANOS</h4>
+			<p>Son similares a virus, pero no completamente iguales. Mientras que el virus es destructivo por sí mismo, el troyano lo que busca es abrir una puerta trasera para favorecer la entrada de otros programas maliciosos. Su nombre es alusivo al “Caballo de Troya” ya que su misión es precisamente, pasar desapercibido e ingresar a los sistemas sin que sea detectado como una amenaza potencial. No se propagan a sí mismos y suelen estar integrados en archivos ejecutables aparentemente inofensivos.
+			</p>
+			<h4>SPYWARE</h4>
+					<p>Un spyware es un programa espía, cuyo objetivo principal es obtener información. Su trabajo suele ser también silencioso, sin dar muestras de su funcionamiento, para que puedan recolectar información sobre nuestro equipo con total tranquilidad, e incluso instalar otros programas sin que nos demos cuenta de ello.</p>
+					<h4>ADWARE</h4>
+					<p>La función principal del adware es la de mostrar publicidad. Aunque su intención no es la de dañar equipos, es considerado por algunos una clase de spyware, ya que puede llegar a recopilar y transmitir datos para estudiar el comportamiento de los usuarios y orientar mejor el tipo de publicidad.
+					</p>
+					<h4>RANSOMWARE</h4>
+					<p>Este es uno de los mas sofisticados y modernos malwares ya que lo que hace es secuestrar datos (encriptándolos) y pedir un rescate por ellos. Normalmente, se solicita una transferencia en bitcoins,la moneda digital, para evitar el rastreo y localización. Este tipo de ciberataque va en aumento y es uno de los más temidos en la Actualidad.</p>
+					</p>
+					<p>Recuperado de: https://www.optical.pe/tipos-de-ataques-informaticos-y-previsiones-para-el-2018/</p>
+						</div>
+	</div>
 
 		<footer class="container">
 			<div class="credit row">
