--- a/video1.html
+++ b/video1.html
@@ -49,7 +49,7 @@
 
 			          <li class="active"><a href="Multimedia.html">Multimedia</a>
 								<ul class="nav nav-sudmenu">
-										 <li><a href="video1.html">Video Tutorial Seguridad Informatica 1</a></li>
+										 <li><a href="">Video Tutorial Seguridad Informatica 1</a></li>
 										 <li><a href="video2.html">Video Tutorial Seguridad Informatica 2</a></li>
 										</ul>
 									 </li>
@@ -68,20 +68,16 @@
 		      	</div>
 	      	</div>
 
-					<div class="row" id="content">
-						<div class="col-md-6">
-							<h2>Video Tutorial Seguridad Informatica 1</h2>
-							<a href="video1.html"> <img src="images/seguridad-google.gif" title="Click para ver más información" alt="info1" class="img-responsive" width="840" height="840"></a>
-						</div>
+					<div class="row" id="thumbnails_container">
+						<div class="col-md-12">
+												<center>
+												<h2>Video Tutorial Seguridad Informatica 1</h2>
+											</center>
+										<p>La Seguridad en redes tiene el objetivo de mantener el intercambio de información libre de riesgo y proteger los recursos informáticos de los usuarios y las Organizaciones. Generalmente, se encuentra amenazada por riesgos que van de la mano con el aumento del uso de Internet en las Instituciones de todos los ámbitos. De esta forma, la Seguridad en redes es la clave para conseguir la confianza de los visitantes web.</p>
+											<iframe width="5300" height="315" src="https://www.youtube.com/embed/p5WgZ1zcgdM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+				</div>
 
-						<div class="row" id="content">
-							<div class="col-md-6">
-								<h2>Video Tutorial Seguridad Informatica 2</h2>
-								<div class="imagen-fondo">
-								<a href="video2.html"><center><img src="images/seguridad2.gif" title="Click para ver más información" alt="info1" class="img-responsive" width="455" height="840"></center></a>
-								</div>
-								</div>
-							</div>
 
 		<footer class="container">
 			<div class="credit row">
