--- a/Autores.html
+++ b/Autores.html
@@ -120,7 +120,7 @@
 																<p><b>Contacto:</b>  laacero80@gmail.com</p>
 																<p><b>Locacion:</b>  Yopal </p>
 																<p><b>Universidad:</b>  Unad_Cead_Yopal</p>
-																<p><b>Skype:</b> angel93acero/p>
+																<p><b>Skype:</b> angel93acero</p>
 																<p><b>Estudiante:</b>  Ingenieria de sistemas</p>
 														</div>
 														</div>
