--- a/Actividades.html
+++ b/Actividades.html
@@ -71,9 +71,9 @@
 
 					<h3>Actividades Didacticas</h3>
 
-					<a href="Ac1Aprendiendo.html" title="Click to see the original size">
+					<a href="Ac1Aprendiendo.html" title="Click para ver más">
 						<img src="images/Interland-grande.jpg"
-                        	alt="Model Girl" class="img-responsive" width="840" height="840">
+                        	 class="img-responsive" width="840" height="840">
 					</a>
 
 				</div>
