--- a/Actividades.html
+++ b/Actividades.html
@@ -71,8 +71,8 @@
 
 					<h3>Actividades Didacticas</h3>
 
-					<a href="Ac1Aprendiendo.html" title="Click para ver más">
-						<img src="images/Interland-grande.jpg"
+					<a href="Ac1Aprendiendo.html" >
+						<img src="images/Interland-grande.jpg" title="Click para ver más"
                         	 class="img-responsive" width="840" height="840">
 					</a>
 
