--- a/Actividades.html
+++ b/Actividades.html
@@ -83,14 +83,14 @@
 						<div class="footer_item section_box col-xs-12 col-sm-4 col-md-12">
 							<h4>Be Internet Awesome</h4>
                             <p> Una aventura gráfica online que te resultará muy familiar en su diseño si eres usuario de Minecraft aprendiendo seguridad informatica.</p>
-                            <a href="https://beinternetawesome.withgoogle.com/interland/" class="btn btn-primary" role="button">Jugar</a>
+                            <a href="https://beinternetawesome.withgoogle.com/interland/" target="_blank" class="btn btn-primary" role="button">Jugar</a>
                             <a href="Ac1Aprendiendo.html" class="btn btn-info" role="button">Información</a>
 						</div>
 
                         <div class="footer_item section_box col-xs-12 col-sm-4 col-md-12">
 							<h4>True Key Game</h4>
                             <p>True Key Game es como se llama el videojuego sobre seguridad informática lanzado por McAfee.</p>
-														<a href="https://game.truekey.com/ES/" class="btn btn-primary" role="button">Jugar</a>
+														<a href="https://game.truekey.com/ES/" target="_blank" class="btn btn-primary" role="button">Jugar</a>
 														<a href="Ac1Aprendiendo.html" class="btn btn-info" role="button">Información</a>
 						</div>
 					</div>
