--- a/Actividades.html
+++ b/Actividades.html
@@ -54,9 +54,9 @@
 
 			           <li class="active"><a href="Actividades.html">Actividades</a>
 								 <ul class="nav nav-sudmenu">
-								 		 <li><a href="">Submenu1</a></li>
-								 		 <li><a href="">Submenu2</a></li>
-								 		 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+									 <li><a href="Ac2Educa.html">Actividad 1</a></li>
+									<li><a href="Ac3Educa.html">Actividad 2</a></li>
+									<li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>i>
 								 		</ul>
 								 	 </li>
 
@@ -104,26 +104,26 @@
 					<a href="Ac1Aprendiendo.html" class="thumbnail">
 						<img src="images/true.jpg">
 						<p class="hideOverflow">
-	                    	<abbr title="Model Girl One">True Key Game</abbr>
+	                    	<abbr>True Key Game</abbr>
 	                    </p>
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 3">
-						<p>Falta anexar</p>
+					<a href="Ac2Educa.html" class="thumbnail">
+						<img src="images/educa.gif">
+						<p>Cuestionario</p>
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 5">
-						<p>Falta anexar</p>
+					<a href="Ac2Educa.html" class="thumbnail">
+						<img src="images/educa.gif">
+						<p>Sopa de letras</p>
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3 col-md-3">
-					<a href="#" class="thumbnail">
-						<img src="images/sinfoto.jpg" alt="Model Girl 7">
-						<p>Falta anexar</p>
+					<a href="Ac3Educa.html" class="thumbnail">
+						<img src="images/educa.gif">
+						<p>Adivinanza</p>
 					</a>
 				</div>
 			</div>
