--- a/Autores.html
+++ b/Autores.html
@@ -53,9 +53,9 @@
 
 			           <li><a href="Actividades.html">Actividades</a>
 								 <ul class="nav nav-sudmenu">
-								 		 <li><a href="">Submenu1</a></li>
-								 		 <li><a href="">Submenu2</a></li>
-								 		 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+									 <li><a href="Ac2Educa.html">Actividad 1</a></li>
+									<li><a href="Ac3Educa.html">Actividad 2</a></li>
+									<li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>i>
 								 		</ul>
 								 	 </li>
 
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
